Reports filter custom date range option  when selected causes the refresh reports button to overlap  Fixes #626

--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -1175,6 +1175,9 @@ table.give-table td.row-title p {
   color: #aaa;
   margin: 0; }
 
+#give-graphs-filter > .tablenav {
+  height: auto; }
+
 #give-logs-filter .search-box {
   float: right; }
 
