--- a/assets/scss/admin/reports.scss
+++ b/assets/scss/admin/reports.scss
@@ -323,6 +323,10 @@ table.give-table {
 
 }
 
+#give-graphs-filter > .tablenav {
+  height:auto;
+}
+
 //---------------------------------------------------------
 //Logs
 //---------------------------------------------------------
